style/dc.scss
/* ... */
.myButton:hover {
    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #0061a7), color-stop(1, #007dc1));
    background:-moz-linear-gradient(top, #0061a7 5%, #007dc1 100%);
    background:-webkit-linear-gradient(top, #0061a7 5%, #007dc1 100%);
    background:-o-linear-gradient(top, #0061a7 5%, #007dc1 100%);
    background:-ms-linear-gradient(top, #0061a7 5%, #007dc1 100%);
    background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0061a7', endColorstr='#007dc1',GradientType=0);
    background-color:#0061a7;
}
.myButton:active {
    position:relative;
    top:1px;
}

#quarter-chart .pie-slice {
    fill: #000000;
}

#day-of-week-chart {
    position: absolute;
    left: -250px;
}

body .container {
    width: 1280px;
}

body .dc-chart g.row text {
    fill: #000000;
}

.left_side {
    margin: 0 26px 0 0;
    float: none;
    display: inline-block;
    vertical-align: top;
    position: relative;
}

.inner_container {
    display: inline-block;
    width: 1380px;
    padding-top: 60px;

    .instructions {
        color: #888888;
    }
}

#runtime-chart strong {
    display: block;
}

.contain_lines {
    float: none;
    clear: both;
    width: 470px;
    display: inline-block;
    height: 430px;
}

.error_statement {
    color: red;
    border: 1px solid red;
    padding: 15px;
    font-size: 16px;
    line-height: 1.6;
    background-color: #ffeeee;
    margin: 60px 0 0 0;
}

#file_upload {

    background-color: #e6e6e6;
    border-bottom: 1px solid #d6d6d6;
    height: 49px;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    margin-bottom: 30px;

    div.update_button {
        position: relative;
        top: 8px;
        left: 432px;
        right: auto;
        padding: 7px;

        div {
            background-image: url(../img/refresh.png);
            background-size: 100% 100%;
            width: 17px;
            height: 17px
        }
    }

    .directory {
        padding: 7px;
        width: 400px;
        position: absolute;
        left: 8px;
        top: 7px;
        color: #555555;
    }

}



table.only_multi_row_selector {

    tr:nth-child(2) td {
        padding: 0 0 0 0;
    }

    tr td:first-child {
        width: 100px;

        select {
            width: 80px;
            margin: 1 0 0 0;
        }
    }

    tr td:nth-child(2) select {
        width: 360px;
    }
}

.composite_chart_type {

    width: 750px;

    .multi_row_selector {

        .unarySelector {
            width: 155px;
        }

        .dimension_attribute {
            width: 350px;
        }

        .input_const {
            display: none;
        }

        padding: 20px 0 0 0;

        table {
            margin: 1px 0 0 0;
        }

        tr:first-child td {
            border-top: 1px solid #bbbbbb;
            padding: 12px 3px 3px 3px;
        }



        .delete_row {
            position: relative;
            top: -4px;
            font-size: 18px;
            width: 22px;
            padding: 6px;
            text-align: center;
        }
    }

    &.edit_mode {
        .myButton.submit {
            display: inline-block;
        }
        .myButton.delete {
            display: inline-block;
        }
    }

    &.add_mode {
        .myButton.submit {
            display: inline-block;
        }
        .myButton.delete {
            display: none;
        }
    }

    table {
        width: 100%;
    }

    select {
        height: 36px;
    }

    .pick_chart_type td {
        padding: 0 0 17px 0;
        border-bottom: 1px solid #bbbbbb;
    }

    tr:nth-child(2) td {
        padding: 26px 0 0 0;
    }

    .chart_name {
        padding: 5px;
        margin: 10px 0 0 0;
    }

    .center {
        margin: 22px 0 7px 0;
        text-align: center;
    }
}

.multi_jupyter.icon {

    position: static;
    padding: 12px 11px 12px 11px;

    div.inner {
        height: 35px;
        width: 35px;
        /*background-image: url(../img/multi_jupyter.png);*/
        background-image: url(../img/planet.gif);
        background-size: 100% 100%;
    }

    .tiny_letter {
        font-size: 13px;
        position: absolute;
        right: 5px;
        top: -1px;
    }
}

.none_here {
    display: none;
}
.attributions {
    font-size: 11px;
    color: #999999;
}

table.dc-data-table {

    .durations {

        position: static;

        div {
            background-image: url(../img/walltime.png);
            background-size: 100% 100%;
        }
    }

    .timeseries {

        position: static;

        div {
            background-image: url(../img/graph.png);
            background-size: 100% 100%;
        }
    }

    .jupyter.icon {

        position: static;
        padding: 10px 7px 10px 8px;

        div {
            height: 16px;
            /* jupyter.png, planet.png, notes.png */
            background-image: url(../img/planet.gif);
            background-size: 100% 100%;
        }
    }

    th {
        position: relative;
    }

    .up_arrow {
        position: absolute;
        top: 10px;
        left: -9px;
        width: 0;
        height: 0;
        border-left: 7px solid transparent;
        border-right: 7px solid transparent;
        border-bottom: 7px solid #555555;
        cursor: pointer;
    }

    .down_arrow {
        position: absolute;
        top: 20px;
        left: -9px;
        width: 0;
        height: 0;
        border-left: 7px solid transparent;
        border-right: 7px solid transparent;
        border-top: 7px solid #555555;
        cursor: pointer;
    }

    .dc-table-head {
        position: relative;
        left: 14px;
    }

    .dc-table-head:last-child {
        display: none;
    }
}
/* ... */

